Fixed alignment issue with monthly subscription amount

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,15 +70,25 @@ main {
     margin-bottom: 10px;
 }
 
+.cost {
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
 span.dollar {
     font-size: 30px;
-    margin-right: 5px;
+    margin-right: 15px;
+    align-items: center;
+    display: flex;
 }
 
 span.month {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 400;
     opacity: 0.5;
+    align-items: center;
+    display: flex;
 }
 
 .subscription h3 {
